[package]
name = "double_auction"
version = "0.1.0"
description = "Auction code for electricity double auction"
edition = "2021"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
postgrest = "1.0"
reqwest = "0.12.15"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
